String.format() durch formatted ersetzt
MenuBar: Edit → Find → Replace Structurally:
- Im Feld Search template: String.format($format$, $args$)
- Im Feld Replace template: $format$.formatted($args$)

Variable Constraints
- $format$:
Type: java.lang.String

- $args$:
Count: 1, unlimited