@@ -145,7 +145,7 @@ public final class PathManager {
         createIfNotExist(parentDirectory);
 
         String fileBaseName = getFileBaseName(filePath.getFileName());
-        logger.info(String.format("Saving %s file '%s'", fileBaseName, filePath.toAbsolutePath()));
+        logger.info("Saving %s file '%s'".formatted(fileBaseName, filePath.toAbsolutePath()));
 
         try {
             if (filePath.toString().endsWith(".json")) {
@@ -161,7 +161,7 @@ public final class PathManager {
                 throw new IllegalArgumentException("Unsupported data type for file: " + filePath.getFileName());
             }
         } catch (Exception e) {
-            logger.error(String.format("Failed saving %s file '%s'", fileBaseName, filePath.toAbsolutePath()));
+            logger.error("Failed saving %s file '%s'".formatted(fileBaseName, filePath.toAbsolutePath()));
         }
     }
 
@@ -172,7 +172,7 @@ public final class PathManager {
         if (!Files.exists(filePath)) return null;
 
         String fileBaseName = getFileBaseName(filePath.getFileName());
-        logger.info(String.format("Loading %s file '%s'", fileBaseName, filePath.toAbsolutePath()));
+        logger.info("Loading %s file '%s'".formatted(fileBaseName, filePath.toAbsolutePath()));
 
         try {
             if (filePath.toString().endsWith(".json")) {
@@ -184,7 +184,7 @@ public final class PathManager {
                 return Files.readAllLines(filePath);
             }
         } catch (Exception e) {
-            logger.error(String.format("Failed loading %s file '%s'", fileBaseName, filePath.toAbsolutePath()));
+            logger.error("Failed loading %s file '%s'".formatted(fileBaseName, filePath.toAbsolutePath()));
             return null;
         }
     }
@@ -196,10 +196,10 @@ public final class PathManager {
         if (!Files.exists(directory)) {
             String directoryIdentifier = getDirectoryIdentifier(directory);
             try {
-                logger.info(String.format("Creating %s directory '%s'", directoryIdentifier, directory.toAbsolutePath()));
+                logger.info("Creating %s directory '%s'".formatted(directoryIdentifier, directory.toAbsolutePath()));
                 Files.createDirectories(directory);
             } catch (IOException e) {
-                logger.error(String.format("Failed creating %s directory '%s'", directoryIdentifier, directory.toAbsolutePath()));
+                logger.error("Failed creating %s directory '%s'".formatted(directoryIdentifier, directory.toAbsolutePath()));
             }
         }
     }
